syntax = "proto3";

service TokenStorageGrpc {
    rpc AddToken(TokenRequest) returns (TokenResponse) {}
    rpc FindToken(TokenRequest) returns (TokenResponse) {}
    rpc DropToken(TokenRequest) returns (TokenResponse) {}
}

message Token {
    string value = 1;
    string user_id = 2;
    int32 lifetime = 3;
    int64 timestamp = 4;
    repeated string scope = 5;
}

message TokenRequest {
    string signature = 1;
    int64 timestamp = 2;
    Token token = 3;
}

message TokenResponse {
    bool is_ok = 1;
    string status = 2;
    Token token = 3;
}
